2017-01-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "radius" is now in gvm-libs/util.

	* misc/radius.c, misc/radius.h: Removed.

	* misc/CMakeLists.txt: Removed handling of this module.

	* INSTALL: Remove hints about radius.

2017-01-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Moving omp library to gvm-libs as gmp library.

	* CMakeLists.txt: Remove any handling for omp library.

	* INSTALL: Removed references to omp library.

	* omp/, omp/CMakeLists.txt, omp/README.txt, omp/omp.c, omp/omp.h,
	libopenvas_omp.pc.in: Removed.

2017-01-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (get_plugin_preference): Adjust to prefs change to
	GHashTable.

	* misc/prefs.c: Remove comment about arglist.
	(global_prefs): Change from arglist to GHashTable.
	(prefs_init, preferences_get, prefs_get_bool, prefs_set, prefs_dump):
	Adjust to change of global_prefs type.

2017-01-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/prefs.c (prefs_set): Fix possible use-after-free when old and
	value point to the same data.

2017-01-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_logging" is now in gvm-libs/base.

	* misc/openvas_logging.c, misc/openvas_logging.h: Removed.

	* misc/CMakeLists.txt: Removed handling of this module.

	* COPYING: Removed the files respectively.

	* misc/arglists.c, misc/bpf_share.c, misc/ids_send.c, misc/network.c,
	misc/pcap.c, misc/plugutils.c: Include gvm/base/logging.h instead of
	openvas_logging.h.

	* nasl/charcnv.c, nasl/exec.c, nasl/nasl_builtin_nmap.c,
	nasl/nasl_builtin_openvas_tcp_scanner.c, nasl/nasl_builtin_synscan.c,
	nasl/nasl_cert.c, nasl/nasl_crypto2.c, nasl/nasl_crypto.c,
	nasl/nasl_debug.c, nasl/nasl_grammar.tab.c, nasl/nasl_grammar.y,
	nasl/nasl_scanner_glue.c, nasl/nasl_smb.c, nasl/nasl_snmp.c,
	nasl/nasl_socket.c, nasl/nasl_ssh.c, nasl/nasl_wmi.c:
	Include gvm/base/logging.h instead of ../misc/openvas_logging.h.
