@@ -1,3 +1,8 @@
+2017-02-01  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* doc/Doxyfile.in, doc/Doxyfile_full.in: Remove 'omp/' directory from
+	Doxygen input.
+
 2017-01-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Module "radius" is now in gvm-libs/util.
